# diagnose_dups

./: .travis.yml  CMakeLists.txt  LICENSE.txt  PackageInfo.cmake  README.md
build-common/cmake/: FindHTSlib.cmake
cmake/: BuildBoost.cmake  BuildHtslib.cmake  PlatformChecks.cmake
config/: config.hpp.in
integration-test/: CMakeLists.txt  diagnose_dups_test.py
scripts/: aggregate_output.R  diagnose_dups.R  functions.R  plot_flowcell.R  run_on_file.sh
src/exe/diagnose-dups/: CMakeLists.txt  diagnose_dups.cpp
src/lib/common/: BranchPrediction.hpp  CMakeLists.txt  FusionBase.hpp  Histogram.hpp  Options.cpp  Options.hpp  Parse.hpp  RingBuffer.hpp  Utility.cpp  Utility.hpp
src/lib/diagnose_dups/: BufferProcessor.hpp  BundleProcessor.hpp  CMakeLists.txt  Read.cpp  Read.hpp  Signature.cpp  Signature.hpp  SignatureBuffer.hpp  SignatureBundle.hpp  Tile.hpp
src/lib/io/: BamRecord.hpp  CMakeLists.txt  SamProducer.hpp  SamReader.hpp  SamReaderThread.hpp
test-data/: NA12878_three_reads.bam  NA12878_two_reads.bam  TestData.hpp.in  expected_data.json  expected_data.txt  generate_integration_test_sam.py  integration_test.bam
test/lib/common/: CMakeLists.txt  TestHistogram.cpp  TestParse.cpp  TestRingBuffer.cpp  TestUtility.cpp
test/lib/diagnose_dups/: CMakeLists.txt  TestRead.cpp  TestSignature.cpp  TestTile.cpp
test/testing/: TestBamRecords.hpp  TestWithBamRecord.hpp
